Fixed some issues that arose in lab